// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InformationItem /> Test Cases Snapshot test should pass 1`] = `
<div
  className="Card-sc-fb64gk-0 InformationList__StyledInformationItem-sc-1i41yqw-0 iJgSZC iFyMa-D"
  data-testid="InformationItem"
>
  <p
    className="Text__StyledText-sc-1jfsuh1-0 lmAVHO"
    color="gray700"
  >
    Title
  </p>
  <p
    className="Text__StyledText-sc-1jfsuh1-0 iEvncp"
    color="gray900"
  >
    1 000 000 kr
  </p>
  <div
    className="Card-sc-fb64gk-0 InformationList__StyledCard-sc-1i41yqw-1 leCJCh fhYwwt"
  >
    <div
      className="Card-sc-fb64gk-0 Tooltip__TooltipCard-sc-xggov6-2 leCJCh hfUwNk"
    >
      <div
        className="Card-sc-fb64gk-0 Tooltip__TooltipIcon-sc-xggov6-1 leCJCh cyLRGr"
      >
        <svg
          fill="none"
          height="20px"
          viewBox="0 0 20 20"
          width="20px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.25 15.5V8.5H10.75V15.5H9.25Z"
            fill="#121212"
          />
          <path
            d="M10 6.875C10.6904 6.875 11.25 6.31536 11.25 5.625C11.25 4.93464 10.6904 4.375 10 4.375C9.30964 4.375 8.75 4.93464 8.75 5.625C8.75 6.31536 9.30964 6.875 10 6.875Z"
            fill="#121212"
          />
          <path
            clipRule="evenodd"
            d="M10 20C15.5228 20 20 15.5228 20 10C20 4.47715 15.5228 0 10 0C4.47715 0 0 4.47715 0 10C0 15.5228 4.47715 20 10 20ZM10 18.5C14.6944 18.5 18.5 14.6944 18.5 10C18.5 5.30558 14.6944 1.5 10 1.5C5.30558 1.5 1.5 5.30558 1.5 10C1.5 14.6944 5.30558 18.5 10 18.5Z"
            fill="#121212"
            fillRule="evenodd"
          />
        </svg>
      </div>
      <div
        className="Card-sc-fb64gk-0 Tooltip__TooltipText-sc-xggov6-0 leCJCh fDlHgV"
      >
        <p
          className="Text__StyledText-sc-1jfsuh1-0 cJpxlc"
          color="gray100"
        >
          This is a description
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<InformationList /> Test Cases Snapshot test should pass 1`] = `
<div
  className="Card-sc-fb64gk-0 InformationList__StyledInformationList-sc-1i41yqw-2 leCJCh kYtJuX"
  data-testid="InformationList"
>
  <div
    className="Card-sc-fb64gk-0 InformationList__StyledInformationItem-sc-1i41yqw-0 iJgSZC iFyMa-D"
    data-testid="InformationItem"
  >
    <p
      className="Text__StyledText-sc-1jfsuh1-0 lmAVHO"
      color="gray700"
    >
      Title
    </p>
    <p
      className="Text__StyledText-sc-1jfsuh1-0 iEvncp"
      color="gray900"
    >
      1 000 000 kr
    </p>
    <div
      className="Card-sc-fb64gk-0 InformationList__StyledCard-sc-1i41yqw-1 leCJCh fhYwwt"
    >
      <div
        className="Card-sc-fb64gk-0 Tooltip__TooltipCard-sc-xggov6-2 leCJCh hfUwNk"
      >
        <div
          className="Card-sc-fb64gk-0 Tooltip__TooltipIcon-sc-xggov6-1 leCJCh cyLRGr"
        >
          <svg
            fill="none"
            height="20px"
            viewBox="0 0 20 20"
            width="20px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.25 15.5V8.5H10.75V15.5H9.25Z"
              fill="#121212"
            />
            <path
              d="M10 6.875C10.6904 6.875 11.25 6.31536 11.25 5.625C11.25 4.93464 10.6904 4.375 10 4.375C9.30964 4.375 8.75 4.93464 8.75 5.625C8.75 6.31536 9.30964 6.875 10 6.875Z"
              fill="#121212"
            />
            <path
              clipRule="evenodd"
              d="M10 20C15.5228 20 20 15.5228 20 10C20 4.47715 15.5228 0 10 0C4.47715 0 0 4.47715 0 10C0 15.5228 4.47715 20 10 20ZM10 18.5C14.6944 18.5 18.5 14.6944 18.5 10C18.5 5.30558 14.6944 1.5 10 1.5C5.30558 1.5 1.5 5.30558 1.5 10C1.5 14.6944 5.30558 18.5 10 18.5Z"
              fill="#121212"
              fillRule="evenodd"
            />
          </svg>
        </div>
        <div
          className="Card-sc-fb64gk-0 Tooltip__TooltipText-sc-xggov6-0 leCJCh fDlHgV"
        >
          <p
            className="Text__StyledText-sc-1jfsuh1-0 cJpxlc"
            color="gray100"
          >
            This is a description
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    className="Card-sc-fb64gk-0 InformationList__StyledInformationItem-sc-1i41yqw-0 iJgSZC iFyMa-D"
    data-testid="InformationItem"
  >
    <p
      className="Text__StyledText-sc-1jfsuh1-0 lmAVHO"
      color="gray700"
    >
      Title
    </p>
    <p
      className="Text__StyledText-sc-1jfsuh1-0 iEvncp"
      color="gray900"
    >
      1 000 000 kr
    </p>
    <div
      className="Card-sc-fb64gk-0 InformationList__StyledCard-sc-1i41yqw-1 leCJCh fhYwwt"
    >
      <div
        className="Card-sc-fb64gk-0 Tooltip__TooltipCard-sc-xggov6-2 leCJCh hfUwNk"
      >
        <div
          className="Card-sc-fb64gk-0 Tooltip__TooltipIcon-sc-xggov6-1 leCJCh cyLRGr"
        >
          <svg
            fill="none"
            height="20px"
            viewBox="0 0 20 20"
            width="20px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.25 15.5V8.5H10.75V15.5H9.25Z"
              fill="#121212"
            />
            <path
              d="M10 6.875C10.6904 6.875 11.25 6.31536 11.25 5.625C11.25 4.93464 10.6904 4.375 10 4.375C9.30964 4.375 8.75 4.93464 8.75 5.625C8.75 6.31536 9.30964 6.875 10 6.875Z"
              fill="#121212"
            />
            <path
              clipRule="evenodd"
              d="M10 20C15.5228 20 20 15.5228 20 10C20 4.47715 15.5228 0 10 0C4.47715 0 0 4.47715 0 10C0 15.5228 4.47715 20 10 20ZM10 18.5C14.6944 18.5 18.5 14.6944 18.5 10C18.5 5.30558 14.6944 1.5 10 1.5C5.30558 1.5 1.5 5.30558 1.5 10C1.5 14.6944 5.30558 18.5 10 18.5Z"
              fill="#121212"
              fillRule="evenodd"
            />
          </svg>
        </div>
        <div
          className="Card-sc-fb64gk-0 Tooltip__TooltipText-sc-xggov6-0 leCJCh fDlHgV"
        >
          <p
            className="Text__StyledText-sc-1jfsuh1-0 cJpxlc"
            color="gray100"
          >
            This is a description
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    className="Card-sc-fb64gk-0 InformationList__StyledInformationItem-sc-1i41yqw-0 iJgSZC iFyMa-D"
    data-testid="InformationItem"
  >
    <p
      className="Text__StyledText-sc-1jfsuh1-0 lmAVHO"
      color="gray700"
    >
      Title
    </p>
    <p
      className="Text__StyledText-sc-1jfsuh1-0 iEvncp"
      color="gray900"
    >
      1 000 000 kr
    </p>
    <div
      className="Card-sc-fb64gk-0 InformationList__StyledCard-sc-1i41yqw-1 leCJCh fhYwwt"
    >
      <div
        className="Card-sc-fb64gk-0 Tooltip__TooltipCard-sc-xggov6-2 leCJCh hfUwNk"
      >
        <div
          className="Card-sc-fb64gk-0 Tooltip__TooltipIcon-sc-xggov6-1 leCJCh cyLRGr"
        >
          <svg
            fill="none"
            height="20px"
            viewBox="0 0 20 20"
            width="20px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.25 15.5V8.5H10.75V15.5H9.25Z"
              fill="#121212"
            />
            <path
              d="M10 6.875C10.6904 6.875 11.25 6.31536 11.25 5.625C11.25 4.93464 10.6904 4.375 10 4.375C9.30964 4.375 8.75 4.93464 8.75 5.625C8.75 6.31536 9.30964 6.875 10 6.875Z"
              fill="#121212"
            />
            <path
              clipRule="evenodd"
              d="M10 20C15.5228 20 20 15.5228 20 10C20 4.47715 15.5228 0 10 0C4.47715 0 0 4.47715 0 10C0 15.5228 4.47715 20 10 20ZM10 18.5C14.6944 18.5 18.5 14.6944 18.5 10C18.5 5.30558 14.6944 1.5 10 1.5C5.30558 1.5 1.5 5.30558 1.5 10C1.5 14.6944 5.30558 18.5 10 18.5Z"
              fill="#121212"
              fillRule="evenodd"
            />
          </svg>
        </div>
        <div
          className="Card-sc-fb64gk-0 Tooltip__TooltipText-sc-xggov6-0 leCJCh fDlHgV"
        >
          <p
            className="Text__StyledText-sc-1jfsuh1-0 cJpxlc"
            color="gray100"
          >
            This is a description
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
